2009-01-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: When converting an XML element from #xmlel
	to #xmlelement, the added xmlns attribute must have its value as
	binary(), not string(); this was a bug. Also add a comment to note
	that converting #xmlattr value to string() during document_to_iolist/1
	is a waste of time in this context.

	* src/compat/xml.erl: Use exmpp_xml:get_attribute*_as_list/3 because
	the xml module always returned string().

	* src/server/exmpp_server_sasl.erl: Document that mechanism names are
	accepted as binary() and will be returned as binary().

	* src/network/exmpp_session.erl: Replace exmpp_xml:get_attribute*/3
	calls by exmpp_xml:get_attribute*_as_list/3 to be sure nothing was
	broken by the API changes.

	* src/core/exmpp_xml.erl: Replace make_attribute/{1,2} by
	attribute/{2,3} to handle the value. These new functions are now used
	through the module instead of direct #xmlattr creation. Rename
	make_element/{1,2} to element/{1,2} and add element/4. Like
	attribute/{2,3}, cdata/1 is now used instead of direct #xmlcdata
	creation.

	* include/exmpp_xml.hrl: Add macros to ease calls to
	exmpp_xml:attribute/2, exmpp_xml:element/{1,2,4} and
	exmpp_xml:cdata/1.

	* testsuite/jid.erl: Include internal/exmpp_xmpp.hrl.

	* testsuite/xml_attributes.erl: Update to use the new
	exmpp_xml:attribute/{2,3} functions.

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_xmpp.hrl, include/internal/exmpp_xmpp.hrl,
	include/internal/Makefile.am: Definition of #jid is moved to an
	internal header.

	* src/core/exmpp_jid.erl: Include internal/exmpp_xml.hrl.

2009-01-14  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stringprep.erl (control_reuse_arg/2): Treat errors
	from control/2 as the first case; this was a regression introduced in
	revision r692.

	* src/core/exmpp_stanza.erl, src/core/exmpp_message.erl: Style.
