@@ -1,3 +1,7 @@
+2009-01-22  Pablo Polvorin  <pablo.polvorin@process-one.net>
+	* src/core/exmpp_message.erl: Use atoms for common message 
+	types (normal, chat, groupchat, headline).
+
 2009-01-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_xml.erl: When converting an XML element from #xmlel
